frontend/test/should_fail/uniqueEdgeBy.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	-e:Edge->;
	if { edgeByUnique(42) == e; }
	
	modify {
	}
}
